@@ -33,6 +33,12 @@
  *
  ****************************************************************************/
 
+MEMORY
+{
+	flash	(rx) : ORIGIN = 0, LENGTH = 500K
+	ram	(rw) : ORIGIN = 0x40000000, LENGTH = 32K - 32
+}
+
 OUTPUT_ARCH(arm)
 ENTRY(_stext)
 SECTIONS
@@ -42,7 +48,6 @@ SECTIONS
 	 * 0x00000000 (default MEMMAP mode assumed)
 	 */
 
-	. = 0x00000000;
 	.text : {
 		_stext = ABSOLUTE(.);
 		*(.text)
@@ -54,7 +59,7 @@ SECTIONS
 		*(.glue_7t)
 		*(.got)			/* Global offset table		*/
 		_etext = ABSOLUTE(.);
-	}
+	} > flash
 	_eronly = ABSOLUTE(.);		/* This is where the .data section
 					 * is relocated for execution out
 					 * FLASH */
@@ -64,20 +69,22 @@ SECTIONS
 	 * to _sdata at boot time.
 	 */
 
-	. = 0x40000000;
 	.data : {
 		_sdata = ABSOLUTE(.);
 		*(.data)
 		CONSTRUCTORS
 		_edata = ABSOLUTE(.);
-	}
+	} >ram AT>flash
 
+	. = ALIGN(32 / 8);
 	.bss : {			/* BSS				*/
 		_sbss = ABSOLUTE(.);
 		*(.bss)
 		*(COMMON)
 		_ebss = ABSOLUTE(.);
 	}
+
+	. = ALIGN(32 / 8);
 					/* Stabs debugging sections.	*/
 	.stab 0 : { *(.stab) }
 	.stabstr 0 : { *(.stabstr) }
